@@ -9,6 +9,9 @@
   if the warnings setting was disabled
 - Remove custom game creation, if you have an ongoing custom
   game make sure to finish it befor updating
+- Remove choice saving from print multiple dialog, it will instead rely
+  only on the latest played difficulty to preselect choices
+- Fix print multiple dialog allowing non numeric characters
 - Fix capitalization in print multiple dialog
 - Update translations:
   Jiri Grönroos (fi); Ekaterine Papava (ka); Pawan Chitrakar (ne);
